# mgvwr

./: .clang-format  .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  build.bat  build.sh  config.json  mgvwr.yaml
src/: config.cpp  config.h  help.cpp  help.h  main.cpp  map_viewer.cpp  map_viewer.h  poor_mans_exiftool.cpp  poor_mans_exiftool.h  utils.cpp  utils.h
